updated datatable limitSelection dropdown css to prevent overflow on 3 digit numbers

--- a/plugins/CoreHome/stylesheets/dataTable/_limitSelection.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_limitSelection.less
@@ -38,13 +38,15 @@
   }
 
   .select-wrapper {
+    padding-right: 21px; 
+      
     input.select-dropdown {
       height: 36px;
       line-height: 30px;
       font-size: 16px;
       margin-bottom: 0;
-      padding-left: 5px;
-      width: 42px !important;
+      width: 100%;
+      text-align: right;
       overflow: hidden;
       border: 0;
       transition: all 0s;
@@ -70,7 +72,7 @@
   margin-top: 0;
   margin-bottom: 0;
   display: inline-block;
-  width: 47px;
+  width: 51px;
   height: 36px;
 }
 
